src/components/Items/Items.css
.Items .shoppingList {
  display: grid;
  /*                    1  2   3  4   5  6  7  8  9  10*/
  grid-template: auto / 5% 5% 35% 5% 30% 5% 5% 5% 5%;
  padding: 1em;
  max-width: 800px;
  margin: 0 auto;
}
.icon-btn {
  border: none;
  outline: none;
  cursor: pointer;
  background: none;
  font-size: 1.2em;
}
.edit-btn,
.delete-btn {
  padding: 0;
  color: black;
  outline: none;
  cursor: pointer;
  background: rgba(255, 255, 255, 0);
  text-align: start;
  height: 75%;

  /* margin: 0 5px 5px 0; */
}
.edit-btn {
  grid-column: 7;
  padding-top: 6px;
  padding-left: 0;
}
.delete-btn {
  grid-column: 9;
}

.check-box {
  margin: auto;
  font-weight: 100;
  grid-column: 1;
}

.Items .item {
  grid-column: 3;
}
.Items .aisle {
  grid-column: 5;
  text-align: center;
}
.aisle-heading {
  margin: auto;
}
.save-edit,
.cancel-edit {
  outline: none;
  cursor: pointer;
  background: rgba(255, 255, 255, 0);
  text-align: start;
  height: 75%;
}
.save-edit {
  grid-column: 7;
}
.cancel-edit {
  grid-column: 9;
}
.Items .list-heading {
  font-family: var(--titleFonts);
  text-align: left;
  margin-bottom: 1%;
  border: none;
}

.ShoppingListItem--checked {
  text-decoration: line-through;
  position: relative;
}

.ShoppingListItem {
  font-size: 1rem;
  border: none;
  outline: none;
  cursor: pointer;
  text-align: left;
  padding: 0.5em 0;
  margin-bottom: 5px;
  background-color: var(--fadedBack);
  font-family: var(--secondaryFonts);
}

.ShoppingListItem-buttons {
  display: inline-flex;
  flex-flow: row nowrap;
  align-items: center;
}

.ShoppingListItem-buttons a {
  color: black;
}

.ShoppingListItem-buttons .button {
  flex: 1 1;
}

.ShoppingListItem--editing {
  border: none;
  padding: 0 auto;
  background-color: rgba(255, 255, 255, 0.65);
  border-radius: 5px;
  margin-bottom: 5px;
}

.ShoppingListItem--editing input {
  display: inline-block;
  width: 100%;
  margin: auto;
  padding: auto;
  font-family: var(--secondaryFonts);
}

.listTitle h1 {
  font-family: var(--titleFonts);
  font-size: 2em;
  margin-bottom: 1vh;
}

.listTitle h3 {
  font-family: var(--secondaryFonts);
  padding-bottom: 0.5vh;
}

.editIcon {
  font-weight: 100;
  margin-left: 3px;
  text-decoration: none;
}
.edit-item {
  margin: 0 0 8px 10px;
  font-size: 1.2em;
}
.fa-times-circle {
  font-weight: 100;
}
.addItemInputs {
  text-align: center;
  margin-top: 2px;
}

.add-item-button {
  width: 20%;
  margin-top: 2px;
}

.add-item-form {
  text-align: center;
}

.form-input {
  margin-top: 5px;
}

.editingItem {
  font-size: 1rem;
  border: none;
  outline: none;
  cursor: pointer;
  /* text-align: left; */
  padding: 0.5em 0;
  background-color: var(--fadedBack);
}

.editingAisle {
  font-size: 1rem;
  border: none;
  outline: none;
  cursor: pointer;
  text-align: center;
  padding: 0.5em 0;
  background-color: var(--fadedBack);
}

.padded {
  padding-left: 2%;
}

.addItemInputs label {
  font-family: var(--titleFonts);
}

.addItemInputs input {
  font-family: var(--secondaryFonts);
}

.editItemButton {
  background-color: transparent;
  border: none;
  padding: 0;
  margin: 0;
}

